feat: .env update; add environment variables: GOOGLE_SHEETS_SPREADSHEET_TAB and GOOGLE_SHEETS_SPREADSHEET_TEAM_LINEUPS_RANGE
refactor: code refactor

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DISCORD_BOT_API_KEY=
-ENVIRONMENT=
+ENVIRONMENT=local
 GOOGLE_SHEETS_SPREADSHEET_ID=
+GOOGLE_SHEETS_SPREADSHEET_TAB=
+GOOGLE_SHEETS_SPREADSHEET_TEAM_LINEUPS_RANGE=
