feat: implement command !cup edition <number> | e <num>
feat: add SERVER_ADDRESS to .env

feat: add .env copy to .gitignore

feat: update Makefile

refactor: significant code refactor

docs: update README.md

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ENVIRONMENT=local
 GOOGLE_SHEETS_SPREADSHEET_ID=
 GOOGLE_SHEETS_SPREADSHEET_TAB=
 GOOGLE_SHEETS_SPREADSHEET_TEAM_LINEUPS_RANGE=
+SERVER_ADDRESS=127.0.0.1:8080
