feat: set all bot commands to require an admin role and privately messaging the bot.
List of admins is set in one of the Google Spreadsheet cells. This cell's coordinates are set in .env file.

feat: GOOGLE_SHEETS_SPREADSHEET_ADMIN_LIST_CELL added to .env file.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DISCORD_BOT_API_KEY=
 ENVIRONMENT=local
+GOOGLE_SHEETS_SPREADSHEET_ADMIN_LIST_CELL=
 GOOGLE_SHEETS_SPREADSHEET_ID=
 GOOGLE_SHEETS_SPREADSHEET_TAB=
 GOOGLE_SHEETS_SPREADSHEET_TEAM_LINEUPS_RANGE=
